--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -8,7 +8,7 @@
 <body>
    <nav><h1>TravelBloom</h1>
     <ul>
-        <li><a href="./index.html" id="home">Home </a></li>
+        <li><a href="./travel_recommendation.html" id="home">Home </a></li>
         <li><a href="./about_us.html" id="about">About Us</a></li>
         <li><a href="./contact_us.html" id="contact">Contact Us</a></li>
         <li><input type="text" id="conditionInput" placeholder="Enter a destination or Keyword">  </li>
@@ -16,41 +16,19 @@
         <li><button id='btnReset'>Reset</button></li>
 </ul>
 </nav>
-<div class="container">
-<div class="analysisForm">
-<h1>Healthcare Data Analysis</h1>
-<div>
-<label for="name">Name:</label>
-<input type="text" id="name">
-</div>
-<div>
-<label>Gender:</label>
-<label for="male">Male</label>
-<input type="radio" name="gender" id="male" value="Male">
-<label for="female">Female</label>
-<input type="radio" name="gender" id="female" value="Female">
-</div>
-<div>
-<label for="age">Age:</label>
-<input type="number" id="age">
-</div>
-<div>
-<label for="condition">Condition:</label>
-<select id="condition">
-  <option value="">Select condition</option>
-  <option value="Diabetes">Diabetes</option>
-  <option value="Thyroid">Thyroid</option>
-  <option value="High Blood Pressure">High Blood Pressure</option>
-</select>
-</div>
-<button id="addPatient">Add Patient</button>
-<h2>Analysis Report</h2>
-<div id="report"></div>
-</div>
-<div class="searchCondition">
-    <div id="result"></div>
-</div>
-</div>
-<script src="./health_analysis.js"></script>
+<section id="home" class="container">
+    <div>
+        <h1>
+          EXPLORE DREAM DESTINATION
+        </h1>
+        <p>
+         It encourages exploration of unfimiliar territories embracing divers4e cultures
+         and landscapes while pursuing the desired destination that captivates the heart 
+         and ignites a sense of wonder.
+        </p>
+    </div>
+  </section>
+            
+<script src="./travel_recommendations.js"></script>
 </body>
 </html>
