--- a/about_us.html
+++ b/about_us.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Travel Recommendations</title>
+  <title>About Us</title>
   <link rel="stylesheet" href="./travel_recommendations.css">
 </head>
 <body>
