--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -28,7 +28,11 @@
         </p>
     </div>
   </section>
-            
-<script src="./travel_recommendations.js"></script>
+
+<div class="searchCondition">
+    <div id="result"></div>
+</div>
+
+<script src="./travel_recommendation.js"></script>
 </body>
 </html>
