--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -17,7 +17,7 @@
 </ul>
 </nav>
 <section id="home" class="container">
-    <div>
+    <div class ="Intro">
         <h1>
           EXPLORE DREAM DESTINATION
         </h1>
@@ -27,11 +27,12 @@
          and ignites a sense of wonder.
         </p>
     </div>
-  </section>
-
+</section>
 <div class="searchCondition">
     <div id="result"></div>
 </div>
+
+
 
 <script src="./travel_recommendation.js"></script>
 </body>
